--- a/app/src/main/res/layout/fragment_title.xml
+++ b/app/src/main/res/layout/fragment_title.xml
@@ -34,5 +34,12 @@
         android:text="@string/start_game"
         android:textColor="@color/white" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/loadGameButton"
+        android:text="@string/load_game"
+        android:textColor="@color/white"/>
+
 
 </LinearLayout>
