--- a/app/src/main/res/layout/fragment_stats.xml
+++ b/app/src/main/res/layout/fragment_stats.xml
@@ -8,10 +8,10 @@
     <!-- It should go without saying, you should not be see bingus-->
     <TextView
         android:id="@+id/stats_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="50dp"
         android:textAlignment="center"
-        android:textSize="18sp"/>
+        android:textSize="18sp" />
 
 </FrameLayout>
